src/test/deca/context/valid/class/classes_with_asm_method.deca
/// Description:
// 	  Asm method override example
// Resultats:
// 	  ok
// Historique:
// 	  cree le 18/01/2023
class A {
    protected boolean x;
    void myAsmBody(float x, boolean a)
        asm("WINT
        WFLOAT 
        SOMETHING R1, R2
        OTHER SOMETHING");
}

class B extends A {
    void myAsmBody(float my_x, boolean my_a) 
        asm(""); //no instructions
}

